fix css make h3 & h6 too big

--- a/assets/style.css
+++ b/assets/style.css
@@ -960,11 +960,11 @@ div.prompt > h6 { /* every prompt inside the .prompt div container */
   }
 }
 @media only screen and (max-width: 600px) {
-  h3 {
+  h3.month-screen {
     font-size: 1.2em !important;
     margin-bottom: 10px !important;
   }
-  h6 {
+  h6.month-screen {
     font-size: 0.8em !important;
     margin-bottom: 10px!important;
   }
